--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="single-animation">
                     <h5>Ready to be opened</h5>
-                    <a href="./index2.html" class="btn cta-btn">explore</a>   
+                    <a href="./page.html" class="btn cta-btn">explore</a>   
                 </div>
             </div>
         </div>
@@ -122,7 +122,7 @@
                         <div class="asterisk"><i class="fas fa-asterisk"></i></div>
                     </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem praesentium vero esse voluptatem quaerat nostrum nulla error, consequatur ipsum enim cumque corporis ea iure explicabo ipsa temporibus nam illo exercitationem.</p>
-                    <a href="./index2.html" class="btn body-btn">view the shop</a>
+                    <a href="./page.html" class="btn body-btn">view the shop</a>
                 </div>
                 <div class="image-group">
                     <!-- <img class="animate-top" src="./images/delight-group-1.jpg" alt="">
