--- a/login-re.html
+++ b/login-re.html
@@ -59,7 +59,7 @@
 									You do not have an account?<a href="./regis.html">Create an account</a>
                                 </div>
                                 <div class="back-home">
-                                    <a class="back-home--link" href="./index2.html">Back to Shop</a>
+                                    <a class="back-home--link" href="./page.html">Back to Shop</a>
                                 </div>
 							</form>
 						</div>
