--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -36,7 +36,7 @@
                 <nav class="header__navbar hide-on-mobile-tablet">
                     <ul class="header__navbar-list">
                         <li class="header__navbar-item header__navbar-item--has-qr  header__navbar-item--separate">
-                            <a class="home-page" href="./index2.html">BACK TO SHOP</a>
+                            <a class="home-page" href="./page.html">BACK TO SHOP</a>
                             <!-- Header QR Code -->
                             <div class="header__qr">
                                 <img src="./images/maQR.png" alt="QR code" class="header__qr-img">
