--- a/regis.html
+++ b/regis.html
@@ -66,7 +66,7 @@
 									<a href="./login-re.html">Log in</a>
                                 </div>
                                 <div class="back-home">
-                                    <a class="back-home--link" href="./index2.html">Back to Shop</a>
+                                    <a class="back-home--link" href="./page.html">Back to Shop</a>
                                 </div>
 							</form>
 						</div>
